use_undefined_identifier/c1/display_board
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/display_board/src/utils.c:813:46: error: use of undeclared identifier 'off_41A3B0'
fprintf( stream, " %s |", ( const char *)*( &off_41A3B0 + *( int *)( v6 + 4 * i))); 
                                             ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/display_board/src/utils.c:831:46: error: use of undeclared identifier 'off_41A3B0'
fprintf( stream, " %s |", ( const char *)*( &off_41A3B0 + *( int *)( v4 + 4 * j))); 
                                             ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/display_board/src/obj/utils.o] Error 1
